Minor refinements.