@@ -7,7 +7,7 @@ import org.xml.sax.Attributes;
 import org.xml.sax.SAXException;
 import org.xml.sax.helpers.DefaultHandler;
 
-public class SaxLocalNameCount extends DefaultHandler {
+public class SaxTestMethodIndex extends DefaultHandler {
 
     private String suite = "";
     private Map<String, Integer> tags;
@@ -17,26 +17,28 @@ public class SaxLocalNameCount extends DefaultHandler {
         return tags;
     }
     
+    @Override
     public void startDocument() throws SAXException {        
         tags = new HashMap<String, Integer>();
     }
 
+    @Override
     public void startElement(String namespaceURI, String localName,
             String qName, Attributes atts) throws SAXException {
 
-        String key = localName;
+        String key = localName.toLowerCase();
 
-        if ("testsuite".equals(key.toLowerCase())) {
+        if ("testsuite".equals(key)) {
             String value = atts.getValue("name");
             if (value != null) {
                 suite = value;
             }
             
         }
-        if ("testcase".equals(key.toLowerCase())) {
+        if ("testcase".equals(key)) {
             String value = atts.getValue("name");
             if (value != null) {
-                tags.put(suite + "." + value, new Integer(count++));
+                tags.put(suite + "." + value, Integer.valueOf(count++));
             }
         }
     }
